feat: add en pages, policy, tearms

--- a/app/index.html
+++ b/app/index.html
@@ -62,8 +62,8 @@
 									<input id="cfirst2" type="checkbox" name="">
 									<label for="cfirst2">
 										<small>
-											Согласен с <a href="" class="blue">Политика конфиденциальности</a>
-											<br>и <a href="" class="blue">Пользовательское соглашение</a>
+											Согласен с <a href="policy.html" class="blue">Политика конфиденциальности</a>
+											<br>и <a href="tearms-of-use.html" class="blue">Пользовательское соглашение</a>
 										</small>
 									</label>
 								</div>
@@ -888,8 +888,8 @@
 							<div class="check">
 								<input id="cfirst" type="checkbox" name="" />
 								<label for="cfirst">
-									Согласен с <a href="" class="blue">Политика конфиденциальности</a>
-									<br>и <a href="" class="blue">Пользовательское соглашение</a>
+									Согласен с <a href="policy.html" class="blue">Политика конфиденциальности</a>
+									<br>и <a href="tearms-of-use.html" class="blue">Пользовательское соглашение</a>
 								</label>
 							</div>
 							<button class="btn btn-blocked" type="submit" disabled>Получить</button>
@@ -1049,10 +1049,10 @@
 						<p class="footer__copy">Рекламная сеть &copy; 2022</p>
 					</div>
 					<div class="mt-0 mt-md-3 d-none d-md-block">
-						<a href="" class="footer__info">
+						<a href="tearms-of-use.html" class="footer__info">
 							Пользовательское соглашение <span>/</span>
 						</a> 
-						<a href="" class="footer__info">
+						<a href="policy.html" class="footer__info">
 							Политика конфиденциальности
 						</a>
 					</div>
@@ -1061,7 +1061,7 @@
 					<a href="#about" class="footer__link">Преимущества</a>
 				</div>
 				<div class="col-12 col-sm-6 col-lg-3 d-none d-md-block">
-					<a href="" class="footer__link">Магазин подарков</a>
+					<a href="#shop" class="footer__link">Магазин подарков</a>
 				</div>
 
 				<div class="col-12 col-sm-6 col-lg-2">
@@ -1088,10 +1088,10 @@
 				</div>
 				<div class="col-12 d-block d-md-none footer-mb-info">
 					<div>
-						<a href="" class="footer__info">
+						<a href="tearms-of-use.html" class="footer__info">
 							Пользовательское соглашение
 						</a> /<br>
-						<a href="" class="footer__info">
+						<a href="policy.html" class="footer__info">
 							Политика конфиденциальности
 						</a>
 					</div>
