--- a/app/index_en.html
+++ b/app/index_en.html
@@ -64,8 +64,8 @@
                     <input id="cfirst2" type="checkbox" name="" />
                     <label for="cfirst2">
                       <small>
-                        Agree <a href="" class="blue"> with Privacy policy </a> <br />and
-                        <a href="" class="blue">User agreement</a>
+                        Agree <a href="policy_en.html" class="blue"> with Privacy policy </a> <br />and
+                        <a href="tearms-of-use_en.html" class="blue">User agreement</a>
                       </small>
                     </label>
                   </div>
@@ -1389,13 +1389,13 @@
           <div class="col-12 col-md-12 col-lg-4 col-xl-4 order-2 order-lg-1">
             <div class="form">
               <form action="">
-                <input type="text" placeholder="URL - адрес сайта" />
+                <input type="text" placeholder="Website URL" />
                 <input type="text" placeholder="Telegram" />
                 <div class="check">
                   <input id="cfirst" type="checkbox" name="" />
                   <label for="cfirst">
-                    I agree with <a href="" class="blue">User agreement</a> <br />and
-                    <a href="" class="blue"> Privacy policy</a>
+                    I agree with <a href="tearms-of-use_en.html" class="blue">User agreement</a> <br />and
+                    <a href="policy_en.html" class="blue"> Privacy policy</a>
                   </label>
                 </div>
                 <button class="btn btn-blocked" type="submit" disabled>Get</button>
@@ -1424,8 +1424,8 @@
               <p class="footer__copy">Ad network &copy; 2022</p>
             </div>
             <div class="mt-0 mt-md-3 d-none d-md-block">
-              <a href="" class="footer__info"> User agreement <span>/</span> </a>
-              <a href="" class="footer__info"> Privacy policy </a>
+              <a href="tearms-of-use_en.html" class="footer__info"> User agreement <span>/</span> </a>
+              <a href="policy_en.html" class="footer__info"> Privacy policy </a>
             </div>
           </div>
           <div class="col-12 col-sm-6 col-lg-2 d-none d-md-block">
@@ -1436,7 +1436,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-2">
-            <p class="footer__social__title d-block d-md-none">Техподдержка</p>
+            <p class="footer__social__title d-block d-md-none">Support</p>
             <a href="https://t.me/medicineteaser" target="_blank" class="footer__social">
               <svg width="24" height="22" viewBox="0 0 24 22" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -1462,8 +1462,8 @@
           </div>
           <div class="col-12 d-block d-md-none footer-mb-info">
             <div>
-              <a href="" class="footer__info"> Пользовательское соглашение </a> /<br />
-              <a href="" class="footer__info"> Политика конфиденциальности </a>
+              <a href="tearms-of-use_en.html" class="footer__info"> User agreement </a> /<br />
+              <a href="policy_en.html" class="footer__info"> Privacy policy </a>
             </div>
           </div>
         </div>
