feat: add language toggle, auth links

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<!-- Modal -->
-	<div class="modalup" id="popup">
+	<!-- <div class="modalup" id="popup">
 		<div class="popup fade">
 			<div class="modal-dialog">
 				<div class="modal-content">
@@ -114,7 +114,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<header>
 		<div class="container">
@@ -175,24 +175,24 @@
 						</div>
 					</nav>
 					<div class="header-auth ml-auto">
-						<a id="header-auth-enter" href="">
+						<a id="header-auth-enter" href="https://beta.ads2.bid/login">
 							<span>Войти</span>
 						</a>
-						<a href="#" class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
-							<span class="header-auth__reg__span">Регистрация</span>
-						</a>
+            <div class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
+              <a href="https://beta.ads2.bid/signup" class="header-auth__reg__span">Регистрация</a>
+            </div>
             <a id="locale" class="locale">
               <div class="locale__icon">
                 <img src="img/flags/russia.svg" alt="">
               </div>
               <ul class="locale__list">
-                <li class="locale__item">
+                <li class="locale__item" data-locale="en">
                   <span class="locale__icon">
                     <img src="img/flags/uk.svg" alt="">
                   </span>
                   <span class="locale__label">English</span>
                 </li>
-                <li class="locale__item">
+                <li class="locale__item" data-locale="ru">
                   <span class="locale__icon">
                     <img src="img/flags/russia.svg" alt="">
                   </span>
@@ -222,7 +222,7 @@
 						<h1>
 							<b>Зарабатывай</b><br> больше с рекламной<br> сетью ads2.bid
 						</h1>
-						<button id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Начать зарабатывать</button>
+						<a href="https://beta.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Начать зарабатывать</a>
 						<p class="home__subtitle">
 							<span></span>
 							Мы предоставляем возможности для простой и выгодной монетизации сайта любого размера. Мы рады
@@ -404,7 +404,9 @@
 							<li>Проводите автоматические  A/B тесты <br>в несколько кликов;</li>
 							<li>Более 20 готовых адаптивных шаблонов.</li>
 						</ul>
-						<button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Создать блок</button>
+						<a href="https://beta.ads2.bid/signup">
+              <button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Создать блок</button>
+            </a>
 					</div>
 				</div>
 			</div>
@@ -430,7 +432,9 @@
 								</ul>
 							</div>
 						</div>
-						<button id="reg3" class="btn btn-grd mt-3 mt-md-5">Попробовать</button>
+						<a href="https://beta.ads2.bid/signup">
+              <button id="reg3" class="btn btn-grd mt-3 mt-md-5">Попробовать</button>
+            </a>
 					</div>
 				</div>
 				<div class="col-12 col-lg-7 order-1 order-lg-2">
@@ -872,7 +876,7 @@
 		</div>
 	</section>
 
-	<section class="mail">
+	<!-- <section class="mail">
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
@@ -903,7 +907,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="shop" id="shop">
 		<div class="container">
@@ -995,7 +999,9 @@
 			</div>
 			<div class="row">
 				<div class="col-12 text-center">
-					<button id="reg4" class="btn btn-grd">Зарегистрироваться</button>
+					<a href="https://beta.ads2.bid/signup">
+            <button id="reg4" class="btn btn-grd">Зарегистрироваться</button>
+          </a>
 				</div>
 			</div>
 		</div>
