--- a/app/index_en.html
+++ b/app/index_en.html
@@ -15,7 +15,7 @@
 
   <body>
     <!-- Modal -->
-    <div class="modalup" id="popup">
+    <!-- <div class="modalup" id="popup">
       <div class="popup fade">
         <div class="modal-dialog">
           <div class="modal-content">
@@ -132,7 +132,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <header>
       <div class="container">
@@ -164,24 +164,24 @@
               </div>
             </nav>
             <div class="header-auth ml-auto">
-              <a id="header-auth-enter" href="">
+              <a id="header-auth-enter" href="https://beta.ads2.bid/login">
                 <span>Log in</span>
               </a>
-              <a href="#" class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
-                <span class="header-auth__reg__span">Registration</span>
-              </a>
+              <div class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
+                <a href="https://beta.ads2.bid/signup" class="header-auth__reg__span">Registration</a>
+              </div>
               <a id="locale" class="locale">
                 <div class="locale__icon">
                   <img src="img/flags/uk.svg" alt="" />
                 </div>
                 <ul class="locale__list">
-                  <li class="locale__item">
+                  <li class="locale__item" data-locale="en">
                     <span class="locale__icon">
                       <img src="img/flags/uk.svg" alt="" />
                     </span>
                     <span class="locale__label">English</span>
                   </li>
-                  <li class="locale__item">
+                  <li class="locale__item" data-locale="ru">
                     <span class="locale__icon">
                       <img src="img/flags/russia.svg" alt="" />
                     </span>
@@ -212,7 +212,7 @@
                 with the ads2.bid advertisement<br />
                 network
               </h1>
-              <button id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Start gaining</button>
+              <a href="https://beta.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Start gaining</a>
               <p class="home__subtitle">
                 <span></span>
                 We offer possibilities for simple and beneficial monetization of websites of any size. We are happy to
@@ -438,7 +438,9 @@
                 <li>Administer automatic A/B tests <br />in just a few clicks;</li>
                 <li>Over 20 ready adaptive samples.</li>
               </ul>
-              <button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Create a Block</button>
+              <a href="https://beta.ads2.bid/signup">
+                <button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Create a Block</button>
+              </a>
             </div>
           </div>
         </div>
@@ -464,7 +466,9 @@
                   </ul>
                 </div>
               </div>
-              <button id="reg3" class="btn btn-grd mt-3 mt-md-5">Give it a try</button>
+              <a href="https://beta.ads2.bid/signup">
+                <button id="reg3" class="btn btn-grd mt-3 mt-md-5">Give it a try</button>
+              </a>
             </div>
           </div>
           <div class="col-12 col-lg-7 order-1 order-lg-2">
@@ -1378,7 +1382,7 @@
       </div>
     </section>
 
-    <section class="mail">
+    <!-- <section class="mail">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -1411,7 +1415,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <footer id="contacts">
       <div class="container">
