--- a/app/policy_en.html
+++ b/app/policy_en.html
@@ -18,24 +18,24 @@
       <div class="container">
         <div class="row">
           <div class="col-12 d-flex align-items-center justify-content-center">
-            <a href="" class="header-logo">
+            <a href="index_en.html" class="header-logo">
               <img src="img/logo.svg" alt="" />
             </a>
             <div class="header-auth ml-auto">
               <a id="locale" class="locale">
                 <div class="locale__icon">
-                  <img src="img/flags/en.svg" alt="" />
+                  <img src="img/flags/uk.svg" alt="" />
                 </div>
                 <ul class="locale__list">
-                  <li class="locale__item">
+                  <li class="locale__item" data-locale="en">
                     <span class="locale__icon">
-                      <img src="img/flags/uk.svg" alt="" />
+                      <img src="img/flags/uk.svg" alt="">
                     </span>
                     <span class="locale__label">English</span>
                   </li>
-                  <li class="locale__item">
+                  <li class="locale__item" data-locale="ru">
                     <span class="locale__icon">
-                      <img src="img/flags/russia.svg" alt="" />
+                      <img src="img/flags/russia.svg" alt="">
                     </span>
                     <span class="locale__label">Русский</span>
                   </li>
@@ -255,7 +255,7 @@
         <div class="row">
           <div class="col-12 col-lg-5">
             <div>
-              <a href="" class="footer-logo">
+              <a href="index_en.html" class="footer-logo">
                 <img src="img/logo.svg" alt="" />
               </a>
               <p class="footer__copy">Ad network &copy; 2022</p>
