feat: hide ru lang

--- a/app/index.html
+++ b/app/index.html
@@ -175,11 +175,11 @@
 						</div>
 					</nav>
 					<div class="header-auth ml-auto">
-						<a id="header-auth-enter" href="https://beta.ads2.bid/login">
+						<a id="header-auth-enter" href="https://cabinet.ads2.bid/login">
 							<span>Войти</span>
 						</a>
             <div class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
-              <a href="https://beta.ads2.bid/signup" class="header-auth__reg__span">Регистрация</a>
+              <a href="https://cabinet.ads2.bid/signup" class="header-auth__reg__span">Регистрация</a>
             </div>
             <a id="locale" class="locale">
               <div class="locale__icon">
@@ -222,7 +222,7 @@
 						<h1>
 							<b>Зарабатывай</b><br> больше с рекламной<br> сетью ads2.bid
 						</h1>
-						<a href="https://beta.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Начать зарабатывать</a>
+						<a href="https://cabinet.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Начать зарабатывать</a>
 						<p class="home__subtitle">
 							<span></span>
 							Мы предоставляем возможности для простой и выгодной монетизации сайта любого размера. Мы рады
@@ -404,7 +404,7 @@
 							<li>Проводите автоматические  A/B тесты <br>в несколько кликов;</li>
 							<li>Более 20 готовых адаптивных шаблонов.</li>
 						</ul>
-						<a href="https://beta.ads2.bid/signup">
+						<a href="https://cabinet.ads2.bid/signup">
               <button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Создать блок</button>
             </a>
 					</div>
@@ -432,7 +432,7 @@
 								</ul>
 							</div>
 						</div>
-						<a href="https://beta.ads2.bid/signup">
+						<a href="https://cabinet.ads2.bid/signup">
               <button id="reg3" class="btn btn-grd mt-3 mt-md-5">Попробовать</button>
             </a>
 					</div>
@@ -999,7 +999,7 @@
 			</div>
 			<div class="row">
 				<div class="col-12 text-center">
-					<a href="https://beta.ads2.bid/signup">
+					<a href="https://cabinet.ads2.bid/signup">
             <button id="reg4" class="btn btn-grd">Зарегистрироваться</button>
           </a>
 				</div>
