--- a/app/index_en.html
+++ b/app/index_en.html
@@ -164,11 +164,11 @@
               </div>
             </nav>
             <div class="header-auth ml-auto">
-              <a id="header-auth-enter" href="https://beta.ads2.bid/login">
+              <a id="header-auth-enter" href="https://cabinet.ads2.bid/login">
                 <span>Log in</span>
               </a>
               <div class="header-auth__reg" data-toggle="modal" data-target="#exampleModal">
-                <a href="https://beta.ads2.bid/signup" class="header-auth__reg__span">Registration</a>
+                <a href="https://cabinet.ads2.bid/signup" class="header-auth__reg__span">Registration</a>
               </div>
               <a id="locale" class="locale">
                 <div class="locale__icon">
@@ -212,7 +212,9 @@
                 with the ads2.bid advertisement<br />
                 network
               </h1>
-              <a href="https://beta.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block">Start gaining</a>
+              <a href="https://cabinet.ads2.bid/signup" id="reg1" class="btn btn-grd mt-5 d-none d-md-block"
+                >Start gaining</a
+              >
               <p class="home__subtitle">
                 <span></span>
                 We offer possibilities for simple and beneficial monetization of websites of any size. We are happy to
@@ -438,7 +440,7 @@
                 <li>Administer automatic A/B tests <br />in just a few clicks;</li>
                 <li>Over 20 ready adaptive samples.</li>
               </ul>
-              <a href="https://beta.ads2.bid/signup">
+              <a href="https://cabinet.ads2.bid/signup">
                 <button id="reg2" class="btn btn-grd mt-3 mt-lg-5">Create a Block</button>
               </a>
             </div>
@@ -466,7 +468,7 @@
                   </ul>
                 </div>
               </div>
-              <a href="https://beta.ads2.bid/signup">
+              <a href="https://cabinet.ads2.bid/signup">
                 <button id="reg3" class="btn btn-grd mt-3 mt-md-5">Give it a try</button>
               </a>
             </div>
