--- a/app/tearms-of-use_en.html
+++ b/app/tearms-of-use_en.html
@@ -29,13 +29,13 @@
                 <ul class="locale__list">
                   <li class="locale__item" data-locale="en">
                     <span class="locale__icon">
-                      <img src="img/flags/uk.svg" alt="">
+                      <img src="img/flags/uk.svg" alt="" />
                     </span>
                     <span class="locale__label">English</span>
                   </li>
                   <li class="locale__item" data-locale="ru">
                     <span class="locale__icon">
-                      <img src="img/flags/russia.svg" alt="">
+                      <img src="img/flags/russia.svg" alt="" />
                     </span>
                     <span class="locale__label">Русский</span>
                   </li>
@@ -61,7 +61,7 @@
             <div class="row">
               <div class="col-12 d-flex align-items-center">
                 <a href="index_en.html" class="breadcrumbs-link">Dashboard</a>
-                <img src="https://ads2.bid/images/small-arrow.svg" class="breadcrumbs-arrow" />
+                <div style="margin: 0 5px">></div>
                 <span class="breadcrumbs-text">User agreement</span>
               </div>
             </div>
