fix: fix buttons

--- a/app/index.html
+++ b/app/index.html
@@ -146,8 +146,12 @@
 								<li><a href="#about">Преимущества</a></li>
 								<li><a href="#shop">Магазин подарков</a></li>
 								<br class="d-block d-lg-none">
-								<li class="d-block d-lg-none"><button id="header-auth-enter2" class="modal-tub__vhod">Войти</button></li>
-								<li class="d-block d-lg-none"><button id="reg5" class="modal-tub__reg">Регистрация</button></li>
+								<li class="d-block d-lg-none">
+                  <a href="https://cabinet.ads2.bid/login" id="header-auth-enter2" class="modal-tub__vhod">Войти</a>
+                </li>
+								<li class="d-block d-lg-none">
+                  <a href="https://cabinet.ads2.bid/signup" id="reg5" class="modal-tub__reg">Регистрация</a>
+                </li>
 								<li class="d-block d-lg-none">
 									<ul class="d-flex flex-row justify-content-start">
 										<li>
@@ -367,7 +371,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
-				<button class="btn btn-grd w-100 d-block d-md-none">Начать зарабатывать</button>
+				<a href="https://cabinet.ads2.bid/signup" class="btn btn-grd w-100 d-block d-md-none">Начать зарабатывать</a>
 			</div>
 		</div>
 	</div>
