--- a/app/index_en.html
+++ b/app/index_en.html
@@ -148,17 +148,10 @@
                   <li><a href="#about">Advantages</a></li>
                   <br class="d-block d-lg-none" />
                   <li class="d-block d-lg-none">
-                    <button id="header-auth-enter2" class="modal-tub__vhod">Log in</button>
+                    <a href="https://cabinet.ads2.bid/login" id="header-auth-enter2" class="modal-tub__vhod">Log in</a>
                   </li>
-                  <li class="d-block d-lg-none"><button id="reg5" class="modal-tub__reg">Registration</button></li>
                   <li class="d-block d-lg-none">
-                    <ul class="d-flex flex-row justify-content-start">
-                      <li>
-                        <a href="https://www.facebook.com/sgrlive" target="_blank" class="faq-fb"
-                          ><img src="https://ads2.bid/images/fb.svg"
-                        /></a>
-                      </li>
-                    </ul>
+                    <a href="https://cabinet.ads2.bid/signup" id="reg5" class="modal-tub__reg">Registration</a>
                   </li>
                 </ul>
               </div>
@@ -340,7 +333,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-grd w-100 d-block d-md-none">Start gaining</button>
+          <a href="https://cabinet.ads2.bid/signup" class="btn btn-grd w-100 d-block d-md-none">Start gaining</a>
         </div>
       </div>
     </div>
